--- a/ReporterHome.service
+++ b/ReporterHome.service
@@ -8,7 +8,7 @@ After=network.target
 ExecStart=/usr/bin/python3 -u /home/pi/PyCharmRemote/ReporterHome/ReporterHome.py
 Restart=always
 WorkingDirectory=/home/pi/PyCharmRemote/ReporterHome
-User=pi
-Group=pi
+User=root
+Group=root
 [Install]
 WantedBy=multi-user.target
